First launch pass

--- a/source/_footer.haml
+++ b/source/_footer.haml
@@ -17,16 +17,16 @@
           = mail_to("info@demuxed.com", "info@demuxed.com")
           
         %li.nav-item
-          %a.signup-btn{href:"http://tickets.demuxed.com/"} Register now
+          %a.signup-btn{href:"https://tickets.demuxed.com/"} Buy Tickets
           
           
       %ul.page-foot__nav
         %li
           %h4 Legal Stuff
         %li.nav-item
-          = link_to("Code of Conduct", "http://confcodeofconduct.com/")
-        %li.nav-item
-          = link_to("Privacy", "/")
+          = link_to("Code of Conduct", "https://demuxed.com/code-of-conduct")
+        -# %li.nav-item
+        -#   = link_to("Privacy", "/")
           
       %ul.page-foot__nav.page-foot__social      
         %li.twitter
