--- a/source/stylesheets/components/_core.scss
+++ b/source/stylesheets/components/_core.scss
@@ -5,6 +5,7 @@ html{
   font-weight: 500;
   line-height: $line-height-ratio;
   color: #000;
+  background-color: $brand-yellow;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: none;
   -moz-osx-font-smoothing: grayscale;
