--- a/source/stylesheets/components/_core.scss
+++ b/source/stylesheets/components/_core.scss
@@ -1276,7 +1276,7 @@ h1, h2, h3, h4, h5 {
   
     .community-sponsors__list {
       display: flex;
-      justify-content: space-between;
+      justify-content: space-evenly;
       align-items: center;
       flex-wrap: wrap;
 
