--- a/source/_header.haml
+++ b/source/_header.haml
@@ -17,4 +17,4 @@
         %li.nav-item
           = link_to "Sponsors", "#sponsors"
         %li.nav-item
-          = link_to "Buy tickets", "#"
+          = link_to "Buy tickets", "https://tickets.demuxed.com"
