--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -358,7 +358,7 @@ title: Demuxed 2020
           %span Sponsor
 
         %div.sponsor
-          = image_tag("/images/svg/sponsors/cbs-balanced.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/cbs-balanced.svg", alt: "", class: ""), "https://cbsinteractive.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer") 
 
       %li
         %h4.sponsor-title
@@ -366,7 +366,7 @@ title: Demuxed 2020
           %span Sponsor
 
         %div.sponsor
-          = image_tag("/images/svg/sponsors/fastly-balanced.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/fastly-balanced.svg", alt: "", class: ""), "https://fastly.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
 
       %li
         = image_tag("/images/svg/sponsor-person-r.svg", alt: "", class: "sponsor-person-r")
@@ -375,7 +375,7 @@ title: Demuxed 2020
           %span Sponsor
 
         %div.sponsor
-          = image_tag("/images/svg/sponsors/encodingdotcom-balanced.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/encodingdotcom-balanced.svg", alt: "", class: ""), "https://encoding.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
 
     %div.community-sponsors
       %h3.sponsor-title
@@ -383,45 +383,45 @@ title: Demuxed 2020
         %span sponsors
       %ul.community-sponsors__list
         %li
-          = image_tag("/images/svg/sponsors/fluendo.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/fluendo.svg", alt: "", class: ""), "https://fluendo.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/eluvio.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/eluvio.svg", alt: "", class: ""), "https://eluvio.io?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/azure.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/azure.svg", alt: "", class: ""), "https://microsoft.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/vimeo.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/vimeo.svg", alt: "", class: ""), "https://vimeo.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/beamr.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/beamr.svg", alt: "", class: ""), "https://beamr.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/gandl.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/gandl.svg", alt: "", class: ""), "https://www.gl-systemhaus.de?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/stackpath.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/stackpath.svg", alt: "", class: ""), "https://stackpath.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/bitmovin.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/bitmovin.svg", alt: "", class: ""), "https://bitmovin.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/broadpeak.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/broadpeak.svg", alt: "", class: ""), "https://broadpeak.tv?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/ezdrm.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/ezdrm.svg", alt: "", class: ""), "https://ezdrm.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/haivision.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/haivision.svg", alt: "", class: ""), "https://haivision.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/m2amedia.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/m2amedia.svg", alt: "", class: ""), "https://m2amedia.tv?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/ns1.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/ns1.svg", alt: "", class: ""), "https://ns1.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/qualabs.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/qualabs.svg", alt: "", class: ""), "https://qualabs.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/streamshark.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/streamshark.svg", alt: "", class: ""), "https://streamshark.io?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/techex.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/techex.svg", alt: "", class: ""), "https://techex.co.uk?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/theo.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/theo.svg", alt: "", class: ""), "https://theoplayer.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/unified.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/unified.svg", alt: "", class: ""), "https://unified-streaming.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/wowza.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/wowza.svg", alt: "", class: ""), "https://wowza.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = image_tag("/images/svg/sponsors/youi.svg", alt: "", class: "")
+          = link_to(image_tag("/images/svg/sponsors/youi.svg", alt: "", class: ""), "https://youi.tv?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
 
     %div.organising-sponsor
       %h3.sponsor-title
@@ -429,7 +429,7 @@ title: Demuxed 2020
         %span By
 
       %div.sponsor
-        = image_tag("/images/svg/sponsors/mux.svg", alt: "", class: "") 
+        = link_to(image_tag("/images/svg/sponsors/mux.svg", alt: "", class: ""), "https://mux.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
 
   = image_tag("/images/svg/footer-mobile.svg", alt: "", class: "footer-mobile")
 
