Fix broken links

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -385,7 +385,7 @@ title: Demuxed 2020
         %li
           = link_to(image_tag("/images/svg/sponsors/fluendo.svg", alt: "", class: ""), "https://fluendo.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/eluvio.svg", alt: "", class: ""), "https://eluvio.io?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/eluvio.svg", alt: "", class: ""), "https://eluv.io?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
           = link_to(image_tag("/images/svg/sponsors/azure.svg", alt: "", class: ""), "https://microsoft.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
@@ -403,13 +403,13 @@ title: Demuxed 2020
         %li
           = link_to(image_tag("/images/svg/sponsors/ezdrm.svg", alt: "", class: ""), "https://ezdrm.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/haivision.svg", alt: "", class: ""), "https://haivision.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/haivision.svg", alt: "", class: ""), "https://www.haivision.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
           = link_to(image_tag("/images/svg/sponsors/m2amedia.svg", alt: "", class: ""), "https://m2amedia.tv?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
           = link_to(image_tag("/images/svg/sponsors/ns1.svg", alt: "", class: ""), "https://ns1.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/qualabs.svg", alt: "", class: ""), "https://qualabs.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/qualabs.svg", alt: "", class: ""), "https://www.qualabs.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
           = link_to(image_tag("/images/svg/sponsors/streamshark.svg", alt: "", class: ""), "https://streamshark.io?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
