--- a/source/stylesheets/components/_core.scss
+++ b/source/stylesheets/components/_core.scss
@@ -1477,6 +1477,23 @@ h1, h2, h3, h4, h5 {
     margin-top: 4em;
   }
 
+  h1,
+  h2,
+  h3 {
+    text-transform: uppercase;
+    font-weight: 700;
+    line-height: 1.15;
+    margin-bottom: 0.4em;
+  }
+
+  h2 {
+    font-size: 2em;
+  }
+
+  h3 {
+    font-size: 1.8em;
+  }
+
   h1 {
     text-align: center;
     font-family: $headline-font;
