update cfp dates and fix the email link styling

--- a/source/2020-wtf.html.erb
+++ b/source/2020-wtf.html.erb
@@ -27,7 +27,7 @@
       <ul>
         <li>Demuxed 2020 is going to be online-native!</li>
         <li>The dates are October 27-29.</li>
-        <li>Call for speakers is open until August 15.</li>
+        <li>Call for speakers is <span class="strikethrough">open until August 29</span> closed!</li>
         <li>
           We'll focus talks in the morning PST in an effort to make things more
           accessible for Europe.
