--- a/source/_footer.haml
+++ b/source/_footer.haml
@@ -12,12 +12,15 @@
 
       %ul.page-foot__nav
         %li
-          %h4 Contact
+          %h4 About
         %li.nav-item
           = mail_to("info@demuxed.com", "info@demuxed.com")
           
         %li.nav-item
           %a.signup-btn{href:"https://tickets.demuxed.com/"} Buy Tickets
+
+        %li.nav-item
+          = link_to("2020: WTF", "/2020-wtf.html")
           
           
       %ul.page-foot__nav
