--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -11,7 +11,7 @@
     %title
       = current_page.data.title || "Demuxed 2020"
 
-    %link{:href => "https://use.typekit.net/gnp7kvj.css", :rel => "stylesheet"}/
+    %link{:href => "https://use.typekit.net/ywa3nug.css", :rel => "stylesheet"}/
 
     = favicon_tag("/favicon.ico", rel: "shortcut icon")
 
