--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -422,6 +422,16 @@ title: Demuxed 2020
           = link_to(image_tag("/images/svg/sponsors/wowza.svg", alt: "", class: ""), "https://wowza.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
           = link_to(image_tag("/images/svg/sponsors/youi.svg", alt: "", class: ""), "https://youi.tv?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+        %li
+          = link_to(image_tag("/images/svg/sponsors/dolby.svg", alt: "", class: ""), "https://dolby.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+        %li
+          = link_to(image_tag("/images/svg/sponsors/compira.svg", alt: "", class: ""), "https://www.compiralabs.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+        %li
+          = link_to(image_tag("/images/svg/sponsors/verizon.svg", alt: "", class: ""), "https://www.verizondigitalmedia.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+        %li
+          = link_to(image_tag("/images/svg/sponsors/brightcove.svg", alt: "", class: ""), "https://brightcove.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+        %li
+          = link_to(image_tag("/images/svg/sponsors/philo.svg", alt: "", class: ""), "https://www.philo.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
 
     %div.organising-sponsor
       %h3.sponsor-title
