Update dolby link

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -423,7 +423,7 @@ title: Demuxed 2020
         %li
           = link_to(image_tag("/images/svg/sponsors/youi.svg", alt: "", class: ""), "https://youi.tv?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/dolby.svg", alt: "", class: ""), "https://dolby.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/dolby.svg", alt: "", class: ""), "https://dolby.io?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
           = link_to(image_tag("/images/svg/sponsors/compira.svg", alt: "", class: ""), "https://www.compiralabs.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
         %li
