--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -358,7 +358,7 @@ title: Demuxed 2020
           %span Sponsor
 
         %div.sponsor
-          = link_to(image_tag("/images/svg/sponsors/cbs-balanced.svg", alt: "", class: ""), "https://cbsinteractive.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer") 
+          = link_to(image_tag("/images/svg/sponsors/cbs-balanced.svg", alt: "", class: ""), "https://cbsinteractive.com", target: "_blank", rel: "noopener noreferrer")
 
       %li
         %h4.sponsor-title
@@ -366,7 +366,7 @@ title: Demuxed 2020
           %span Sponsor
 
         %div.sponsor
-          = link_to(image_tag("/images/svg/sponsors/fastly-balanced.svg", alt: "", class: ""), "https://fastly.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/fastly-balanced.svg", alt: "", class: ""), "https://fastly.com", target: "_blank", rel: "noopener noreferrer")
 
       %li
         = image_tag("/images/svg/sponsor-person-r.svg", alt: "", class: "sponsor-person-r")
@@ -375,7 +375,7 @@ title: Demuxed 2020
           %span Sponsor
 
         %div.sponsor
-          = link_to(image_tag("/images/svg/sponsors/encodingdotcom-balanced.svg", alt: "", class: ""), "https://encoding.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/encodingdotcom-balanced.svg", alt: "", class: ""), "https://encoding.com", target: "_blank", rel: "noopener noreferrer")
 
     %div.community-sponsors
       %h3.sponsor-title
@@ -383,55 +383,55 @@ title: Demuxed 2020
         %span sponsors
       %ul.community-sponsors__list
         %li
-          = link_to(image_tag("/images/svg/sponsors/fluendo.svg", alt: "", class: ""), "https://fluendo.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/fluendo.svg", alt: "", class: ""), "https://fluendo.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/eluvio.svg", alt: "", class: ""), "https://eluv.io?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/eluvio.svg", alt: "", class: ""), "https://eluv.io", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/azure.svg", alt: "", class: ""), "https://microsoft.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/azure.svg", alt: "", class: ""), "https://microsoft.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/vimeo.svg", alt: "", class: ""), "https://vimeo.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/vimeo.svg", alt: "", class: ""), "https://vimeo.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/beamr.svg", alt: "", class: ""), "https://beamr.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/beamr.svg", alt: "", class: ""), "https://beamr.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/gandl.svg", alt: "", class: ""), "https://www.gl-systemhaus.de?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/gandl.svg", alt: "", class: ""), "https://www.gl-systemhaus.de", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/stackpath.svg", alt: "", class: ""), "https://stackpath.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/stackpath.svg", alt: "", class: ""), "https://stackpath.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/bitmovin.svg", alt: "", class: ""), "https://bitmovin.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/bitmovin.svg", alt: "", class: ""), "https://bitmovin.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/broadpeak.svg", alt: "", class: ""), "https://broadpeak.tv?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/broadpeak.svg", alt: "", class: ""), "https://broadpeak.tv", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/ezdrm.svg", alt: "", class: ""), "https://ezdrm.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/ezdrm.svg", alt: "", class: ""), "https://ezdrm.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/haivision.svg", alt: "", class: ""), "https://www.haivision.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/haivision.svg", alt: "", class: ""), "https://www.haivision.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/m2amedia.svg", alt: "", class: ""), "https://m2amedia.tv?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/m2amedia.svg", alt: "", class: ""), "https://m2amedia.tv", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/ns1.svg", alt: "", class: ""), "https://ns1.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/ns1.svg", alt: "", class: ""), "https://ns1.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/qualabs.svg", alt: "", class: ""), "https://www.qualabs.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/qualabs.svg", alt: "", class: ""), "https://www.qualabs.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/streamshark.svg", alt: "", class: ""), "https://streamshark.io?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/streamshark.svg", alt: "", class: ""), "https://streamshark.io", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/techex.svg", alt: "", class: ""), "https://techex.co.uk?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/techex.svg", alt: "", class: ""), "https://techex.co.uk", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/theo.svg", alt: "", class: ""), "https://theoplayer.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/theo.svg", alt: "", class: ""), "https://theoplayer.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/unified.svg", alt: "", class: ""), "https://unified-streaming.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/unified.svg", alt: "", class: ""), "https://unified-streaming.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/wowza.svg", alt: "", class: ""), "https://wowza.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/wowza.svg", alt: "", class: ""), "https://wowza.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/youi.svg", alt: "", class: ""), "https://youi.tv?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/youi.svg", alt: "", class: ""), "https://youi.tv", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/dolby.svg", alt: "", class: ""), "https://dolby.io?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/dolby.svg", alt: "", class: ""), "https://dolby.io", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/compira.svg", alt: "", class: ""), "https://www.compiralabs.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/compira.svg", alt: "", class: ""), "https://www.compiralabs.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/verizon.svg", alt: "", class: ""), "https://www.verizondigitalmedia.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/verizon.svg", alt: "", class: ""), "https://www.verizondigitalmedia.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/brightcove.svg", alt: "", class: ""), "https://brightcove.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/brightcove.svg", alt: "", class: ""), "https://brightcove.com", target: "_blank", rel: "noopener noreferrer")
         %li
-          = link_to(image_tag("/images/svg/sponsors/philo.svg", alt: "", class: ""), "https://www.philo.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+          = link_to(image_tag("/images/svg/sponsors/philo.svg", alt: "", class: ""), "https://www.philo.com", target: "_blank", rel: "noopener noreferrer")
 
     %div.organising-sponsor
       %h3.sponsor-title
@@ -439,7 +439,7 @@ title: Demuxed 2020
         %span By
 
       %div.sponsor
-        = link_to(image_tag("/images/svg/sponsors/mux.svg", alt: "", class: ""), "https://mux.com?ref=demuxed", target: "_blank", rel: "noopener noreferrer")
+        = link_to(image_tag("/images/svg/sponsors/mux.svg", alt: "", class: ""), "https://mux.com", target: "_blank", rel: "noopener noreferrer")
 
   = image_tag("/images/svg/footer-mobile.svg", alt: "", class: "footer-mobile")
 
