Fix nav for WTF page

--- a/source/_header.haml
+++ b/source/_header.haml
@@ -7,14 +7,14 @@
     %nav#js-main-nav.page-head__nav
       %ul
         %li.nav-item
-          = link_to "Why watch", "#why-watch"
+          = link_to "Why watch", "/#why-watch"
         -# %li.nav-item
         -#   = link_to "Speakers", "#speakers"
         -# %li.nav-item
         -#   = link_to "Schedule", "#schedule"
         %li.nav-item
-          = link_to "About us", "#about-us"
+          = link_to "About us", "/#about-us"
         %li.nav-item
-          = link_to "Sponsors", "#sponsors"
+          = link_to "Sponsors", "/#sponsors"
         %li.nav-item
           = link_to "Buy tickets", "https://tickets.demuxed.com"
