Add speakers nav back

--- a/source/_header.haml
+++ b/source/_header.haml
@@ -8,8 +8,8 @@
       %ul
         %li.nav-item
           = link_to "Why watch", "/#why-watch"
-        -# %li.nav-item
-        -#   = link_to "Speakers", "#speakers"
+        %li.nav-item
+          = link_to "Speakers", "#speakers"
         -# %li.nav-item
         -#   = link_to "Schedule", "#schedule"
         %li.nav-item
