--- a/source/_header.haml
+++ b/source/_header.haml
@@ -8,10 +8,10 @@
       %ul
         %li.nav-item
           = link_to "Why watch", "/#why-watch"
+        %li.nav-item
+          = link_to "Speakers", "/#speakers"
         -# %li.nav-item
-        -#   = link_to "Speakers", "#speakers"
-        -# %li.nav-item
-        -#   = link_to "Schedule", "#schedule"
+        -#   = link_to "Schedule", "/#schedule"
         %li.nav-item
           = link_to "About us", "/#about-us"
         %li.nav-item
