--- a/source/_talks.haml
+++ b/source/_talks.haml
@@ -3,7 +3,7 @@
 
 %div.modal{id: 'popup-' + id}
   %div.modal__container{role: "dialog", aria: {modal: true, labelledby: "#{id}-title"}}
-    %a.modal-btn{onclick: 'closeModal(event, this);'}
+    %a.modal-btn{onclick: 'hideTalkModal(event);'}
     .speakers
       - details.speakers.each do |speaker_name|
         - speaker = speakers.find{ |s| s.name == speaker_name if s.name }
