--- a/source/_talks.haml
+++ b/source/_talks.haml
@@ -16,4 +16,4 @@
           %h3.speakers-list__name= speaker.name
           %h4.speakers-list__company= speaker.company
     %h3.talk-title #{details.title}
-    %p.talk-description #{details.description.to_s.gsub("\n",'<br />')}
+    %p.talk-description #{details.description}
